Fix UI bug
Fix UI bug where calculator and containers had uneven height

--- a/style.css
+++ b/style.css
@@ -88,7 +88,6 @@ main {
   text-align: left;
   width: 200px;
   max-width: 400px;
-  margin-bottom: 20px;
 }
 
 #debug h3{
@@ -97,6 +96,7 @@ main {
   font-style: normal;
   width: 100%;
   margin:20px 0;
+  text-align: center;
 }
 
 #debug ul{
@@ -107,10 +107,14 @@ main {
   list-style-type: none;
   margin: 10px 20px;
   text-align: center;
+  padding: 0 ;
 }
 
 @media (width <= 600px) {
   .main-container{
     width: 80%;
+  }
+  #debug{
+    margin-bottom: 20px;  
   }
 }
